# routes/user.js
@@ -54,11 +54,9 @@ router.get('/favorites', async (req,res,next) => {
 
 
 
-router.get('/:userId/familyRecipes', async(req, res, next) => {
+router.get('/familyRecipes', async(req, res, next) => {
   try{
-    if(req.params.userId != req.user_id){
-      throw new Error(`user Id mismatch. current userId:${req.user_id}, requested:${req.params.userId}`)
-    }
+    
     const user_id = req.user_id
     const familyRecipes = await user_utils.getFamilyRecipes(user_id)
     res.status(200).send(familyRecipes)
@@ -67,7 +65,7 @@ router.get('/:userId/familyRecipes', async(req, res, next) => {
   }
   })
   
-  router.use('/:userId/familyRecipes', function(err, req, res, next){
+  router.use('/familyRecipes', function(err, req, res, next){
     console.log(err.message);
     res.status(401).send("User is unauthorized to enter the page")
   })
